# Labstar

./: Cargo.toml  LICENSE-MIT  README.md  index.html
src/: app.rs
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/src/: main.rs
